modified project and added delete usecase of problem

--- a/package.json
+++ b/package.json
@@ -1,49 +1,52 @@
 {
-  "name": "hyper-coprogramming",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "scripts": {
-    "start": "node ./build/src/index.js",
-    "dev": "nodemon",
-    "build": "rimraf ./build && tsc",
-    "test": "jest --forceExit",
-    "test:watch": "jest --watchAll --detectOpenHandles --maxWorkers=1",
-    "test:clear": "jest --clearCache"
-  },
-  "jest": {
-    "setupFiles": [
-      "<rootDir>config.ts"
-    ],
-    "transform": {
-      ".(ts|tsx)": [
-        "ts-jest",
-        {
-          "ts-jest": {
-            "compiler": "ttypescript"
-          }
-        }
-      ]
-    }
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "devDependencies": {
-    "nodemon": "^3.0.1"
-  },
-  "dependencies": {
-    "@types/cors": "^2.8.13",
-    "@types/express": "^4.17.17",
-    "@types/jest": "^29.5.3",
-    "@types/jsonwebtoken": "^9.0.2",
-    "@types/node": "^20.4.8",
-    "@types/uuid": "^9.0.2",
-    "cors": "^2.8.5",
-    "dotenv": "^16.3.1",
-    "express": "^4.18.2",
-    "helmet": "^7.0.0",
-    "mongodb": "^5.7.0",
-    "mongoose": "^7.4.2"
-  }
+	"name": "hyper-coprogramming",
+	"version": "1.0.0",
+	"description": "",
+	"main": "index.js",
+	"scripts": {
+		"start": "node ./build/src/index.js",
+		"dev": "nodemon",
+		"build": "rimraf ./build && tsc",
+		"test": "jest --forceExit",
+		"test:watch": "jest --watchAll --detectOpenHandles --maxWorkers=1",
+		"test:clear": "jest --clearCache"
+	},
+	"jest": {
+		"setupFiles": [
+			"<rootDir>config.ts"
+		],
+		"transform": {
+			".(ts|tsx)": [
+				"ts-jest",
+				{
+					"ts-jest": {
+						"compiler": "typescript"
+					}
+				}
+			]
+		}
+	},
+	"keywords": [],
+	"author": "",
+	"license": "ISC",
+	"devDependencies": {
+		"nodemon": "^3.0.1"
+	},
+	"dependencies": {
+		"@types/cors": "^2.8.13",
+		"@types/express": "^4.17.17",
+		"@types/jest": "^29.5.3",
+		"@types/jsonwebtoken": "^9.0.2",
+		"@types/node": "^20.4.8",
+		"@types/uuid": "^9.0.2",
+		"cors": "^2.8.5",
+		"dotenv": "^16.3.1",
+		"express": "^4.18.2",
+		"helmet": "^7.0.0",
+		"mongodb": "^5.7.0",
+		"mongoose": "^7.4.2",
+		"ts-node": "^10.9.1",
+		"typescript": "^5.1.6",
+		"winston": "^3.10.0"
+	}
 }
